--- a/fontello/css/point-codes.css
+++ b/fontello/css/point-codes.css
@@ -1,64 +1,80 @@
 
-.icon-chrome:before { content: '\e800'; } /* '' */
-.icon-opera:before { content: '\e801'; } /* '' */
-.icon-ie:before { content: '\e802'; } /* '' */
-.icon-caret_down_1x:before { content: '\e803'; } /* '' */
-.icon-caret_down:before { content: '\e804'; } /* '' */
-.icon-caret_left_1x:before { content: '\e805'; } /* '' */
-.icon-caret_left:before { content: '\e806'; } /* '' */
-.icon-caret_right_1x:before { content: '\e807'; } /* '' */
-.icon-caret_right:before { content: '\e808'; } /* '' */
-.icon-caret_up_1x:before { content: '\e809'; } /* '' */
-.icon-caret_up:before { content: '\e80a'; } /* '' */
-.icon-chat_1x:before { content: '\e80b'; } /* '' */
-.icon-chat:before { content: '\e80c'; } /* '' */
-.icon-check_1x:before { content: '\e80d'; } /* '' */
-.icon-check:before { content: '\e80e'; } /* '' */
-.icon-cog_1x:before { content: '\e80f'; } /* '' */
-.icon-cog_fill:before { content: '\e810'; } /* '' */
-.icon-cog:before { content: '\e811'; } /* '' */
-.icon-ellipsis_1x:before { content: '\e812'; } /* '' */
-.icon-ellipsis_fill:before { content: '\e813'; } /* '' */
-.icon-ellipsis:before { content: '\e814'; } /* '' */
-.icon-facebook_1x:before { content: '\e815'; } /* '' */
-.icon-facebook_fill:before { content: '\e816'; } /* '' */
-.icon-facebook:before { content: '\e817'; } /* '' */
-.icon-gmail:before { content: '\e818'; } /* '' */
-.icon-gmail_1x:before { content: '\e819'; } /* '' */
-.icon-home_1x:before { content: '\e81a'; } /* '' */
-.icon-home_fill:before { content: '\e81b'; } /* '' */
-.icon-home:before { content: '\e81c'; } /* '' */
-.icon-logo_1x:before { content: '\e81d'; } /* '' */
-.icon-logo_fill:before { content: '\e81e'; } /* '' */
-.icon-logo:before { content: '\e81f'; } /* '' */
-.icon-loupe_1x:before { content: '\e820'; } /* '' */
-.icon-loupe:before { content: '\e821'; } /* '' */
-.icon-people_1x:before { content: '\e822'; } /* '' */
-.icon-people_fill:before { content: '\e823'; } /* '' */
-.icon-people:before { content: '\e824'; } /* '' */
-.icon-person-plus_1x:before { content: '\e825'; } /* '' */
-.icon-person-plus:before { content: '\e826'; } /* '' */
-.icon-quote_1x:before { content: '\e827'; } /* '' */
-.icon-quote_fill:before { content: '\e828'; } /* '' */
-.icon-quote:before { content: '\e829'; } /* '' */
-.icon-refresh_1x:before { content: '\e82a'; } /* '' */
-.icon-refresh:before { content: '\e82b'; } /* '' */
-.icon-share_1x:before { content: '\e82c'; } /* '' */
-.icon-share:before { content: '\e82d'; } /* '' */
-.icon-single_quote_fill:before { content: '\e82e'; } /* '' */
-.icon-single_quote:before { content: '\e82f'; } /* '' */
-.icon-star_1x:before { content: '\e830'; } /* '' */
-.icon-star_fill:before { content: '\e831'; } /* '' */
-.icon-star:before { content: '\e832'; } /* '' */
-.icon-tag_1x:before { content: '\e833'; } /* '' */
-.icon-tag:before { content: '\e834'; } /* '' */
-.icon-twitter_1x:before { content: '\e835'; } /* '' */
-.icon-twitter_fill:before { content: '\e836'; } /* '' */
-.icon-twitter:before { content: '\e837'; } /* '' */
-.icon-x_1x:before { content: '\e838'; } /* '' */
-.icon-x:before { content: '\e839'; } /* '' */
-.icon-firefox:before { content: '\e83a'; } /* '' */
-.icon-gmail-1:before { content: '\e83b'; } /* '' */
-.icon-laptop:before { content: '\e83d'; } /* '' */
-.icon-mobile:before { content: '\e83e'; } /* '' */
-.icon-apple:before { content: '\e83f'; } /* '' */
+.pnticn-chrome:before { content: '\e800'; } /* '' */
+.pnticn-opera:before { content: '\e801'; } /* '' */
+.pnticn-ie:before { content: '\e802'; } /* '' */
+.pnticn-arrow-up_1x:before { content: '\e803'; } /* '' */
+.pnticn-arrow-up_fill:before { content: '\e804'; } /* '' */
+.pnticn-arrow-up:before { content: '\e805'; } /* '' */
+.pnticn-caret_down_1x:before { content: '\e806'; } /* '' */
+.pnticn-caret_down:before { content: '\e807'; } /* '' */
+.pnticn-caret_left_1x:before { content: '\e808'; } /* '' */
+.pnticn-caret_left:before { content: '\e809'; } /* '' */
+.pnticn-caret_right_1x:before { content: '\e80a'; } /* '' */
+.pnticn-caret_right:before { content: '\e80b'; } /* '' */
+.pnticn-caret_up_1x:before { content: '\e80c'; } /* '' */
+.pnticn-caret_up:before { content: '\e80d'; } /* '' */
+.pnticn-chat_1x:before { content: '\e80e'; } /* '' */
+.pnticn-chat:before { content: '\e80f'; } /* '' */
+.pnticn-check_1x:before { content: '\e810'; } /* '' */
+.pnticn-check:before { content: '\e811'; } /* '' */
+.pnticn-clipboard_1x:before { content: '\e812'; } /* '' */
+.pnticn-clipboard-check_1x:before { content: '\e813'; } /* '' */
+.pnticn-clipboard-check:before { content: '\e814'; } /* '' */
+.pnticn-clipboard:before { content: '\e815'; } /* '' */
+.pnticn-cog_1x:before { content: '\e816'; } /* '' */
+.pnticn-cog_fill:before { content: '\e817'; } /* '' */
+.pnticn-cog:before { content: '\e818'; } /* '' */
+.pnticn-ellipsis_1x:before { content: '\e819'; } /* '' */
+.pnticn-ellipsis_fill:before { content: '\e81a'; } /* '' */
+.pnticn-ellipsis:before { content: '\e81b'; } /* '' */
+.pnticn-facebook_1x:before { content: '\e81c'; } /* '' */
+.pnticn-facebook_fill:before { content: '\e81d'; } /* '' */
+.pnticn-facebook:before { content: '\e81e'; } /* '' */
+.pnticn-gmail_1x:before { content: '\e81f'; } /* '' */
+.pnticn-gmail:before { content: '\e820'; } /* '' */
+.pnticn-home_1x:before { content: '\e821'; } /* '' */
+.pnticn-home_fill:before { content: '\e822'; } /* '' */
+.pnticn-home:before { content: '\e823'; } /* '' */
+.pnticn-logo_1x:before { content: '\e824'; } /* '' */
+.pnticn-logo:before { content: '\e825'; } /* '' */
+.pnticn-loupe_1x:before { content: '\e826'; } /* '' */
+.pnticn-loupe:before { content: '\e827'; } /* '' */
+.pnticn-people_1x:before { content: '\e828'; } /* '' */
+.pnticn-people_fill:before { content: '\e829'; } /* '' */
+.pnticn-people:before { content: '\e82a'; } /* '' */
+.pnticn-person-plus_1x:before { content: '\e82b'; } /* '' */
+.pnticn-person-plus:before { content: '\e82c'; } /* '' */
+.pnticn-play_1x:before { content: '\e82d'; } /* '' */
+.pnticn-play_fill:before { content: '\e82e'; } /* '' */
+.pnticn-play:before { content: '\e82f'; } /* '' */
+.pnticn-plus_1x:before { content: '\e830'; } /* '' */
+.pnticn-plus:before { content: '\e831'; } /* '' */
+.pnticn-quote_1x:before { content: '\e832'; } /* '' */
+.pnticn-quote_fill:before { content: '\e833'; } /* '' */
+.pnticn-quote:before { content: '\e834'; } /* '' */
+.pnticn-refresh_1x:before { content: '\e835'; } /* '' */
+.pnticn-refresh:before { content: '\e836'; } /* '' */
+.pnticn-share_1x:before { content: '\e837'; } /* '' */
+.pnticn-share:before { content: '\e838'; } /* '' */
+.pnticn-single_quote_fill:before { content: '\e839'; } /* '' */
+.pnticn-firefox:before { content: '\e83a'; } /* '' */
+.pnticn-single_quote:before { content: '\e83b'; } /* '' */
+.pnticn-star_1x:before { content: '\e83c'; } /* '' */
+.pnticn-laptop:before { content: '\e83d'; } /* '' */
+.pnticn-mobile:before { content: '\e83e'; } /* '' */
+.pnticn-apple:before { content: '\e83f'; } /* '' */
+.pnticn-star_fill:before { content: '\e840'; } /* '' */
+.pnticn-star:before { content: '\e841'; } /* '' */
+.pnticn-tag_1x:before { content: '\e842'; } /* '' */
+.pnticn-tag:before { content: '\e843'; } /* '' */
+.pnticn-trend_1x:before { content: '\e844'; } /* '' */
+.pnticn-trend_fill:before { content: '\e845'; } /* '' */
+.pnticn-trend:before { content: '\e846'; } /* '' */
+.pnticn-twitter_1x:before { content: '\e847'; } /* '' */
+.pnticn-twitter_fill:before { content: '\e848'; } /* '' */
+.pnticn-twitter:before { content: '\e849'; } /* '' */
+.pnticn-warning_1x:before { content: '\e84a'; } /* '' */
+.pnticn-warning_fill:before { content: '\e84b'; } /* '' */
+.pnticn-warning:before { content: '\e84c'; } /* '' */
+.pnticn-x_1x:before { content: '\e84d'; } /* '' */
+.pnticn-x:before { content: '\e84e'; } /* '' */
